--- a/setup/index.html
+++ b/setup/index.html
@@ -26,7 +26,9 @@
         <!-- links -->
         <ul class="links">
           <li>
-            <a href="index.html">home</a>
+            <a href="https://facebook.com/arafat.friendly" target="_blank"
+              >Arafat | Home</a
+            >
           </li>
           <li>
             <a href="about.html">about</a>
